--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "juice-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Electron client for Kirka.io",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/irrvlo/juice-client.git"
   },
   "keywords": [],
   "author": "irrvlo",
   "license": "ISC",
   "devDependencies": {
     "electron": "^10.4.7",
-    "electron-builder": "^24.13.3"
-  },
-  "dependencies": {
+    "electron-builder": "^22.0.3",
+    "v8-compile-cache": "^2.4.0",
     "discord-rpc": "^4.0.1",
     "electron-localshortcut": "^3.2.1",
-    "electron-updater": "^6.1.8",
-    "v8-compile-cache": "^2.4.0"
+    "electron-updater": "^6.1.8"
   }
 }
