--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juice-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Electron client for Kirka.io",
   "main": "src/main.js",
   "scripts": {
@@ -16,10 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^10.4.7",
-    "electron-builder": "^22.0.3",
-    "v8-compile-cache": "^2.4.0",
-    "discord-rpc": "^4.0.1",
+    "electron-builder": "^22.0.3"
+  },
+  "dependencies": {
+    "discord-rpc-revamp": "^2.0.4",
     "electron-localshortcut": "^3.2.1",
-    "electron-updater": "^6.1.8"
+    "electron-updater": "^6.1.8",
+    "v8-compile-cache": "^2.4.0"
   }
 }
