--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juice-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Electron client for Kirka.io",
   "main": "src/main.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord-rpc-revamp": "^2.0.4",
     "electron-localshortcut": "^3.2.1",
+    "electron-store": "^8.2.0",
     "electron-updater": "^6.1.8",
     "v8-compile-cache": "^2.4.0"
   }
