--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [macos-latest, windows-latest]
         include:
           - os: windows-latest
+            arch: x64
+          - os: macos-latest
             arch: x64
 
     steps:
