--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         include:
           - os: windows-latest
             arch: x64
-          - os: macos-latest
+          - os: macos-12
             arch: x64
 
     steps:
