--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [macos-10.15, windows-latest]
         include:
           - os: windows-latest
             arch: x64
-          - os: macos-12
+          - os: macos-10.15
             arch: x64
 
     steps:
