--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Install dmg-license
+        if: matrix.os == 'macos-11'
+        run: npm install dmg-license
+
       - name: Get version and name from package.json
         id: get_version_name
         run: |
