--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,6 +14,13 @@ mac:
   target: dmg
   icon: "src/assets/img/icon.icns"
   artifactName: "${name}-setup-mac-${version}.${ext}"
+linux:
+  target:
+    - AppImage
+    - tar.gz
+  category: Game
+  icon: "src/assets/img/icon.png"
+  artifactName: "${name}-${version}-linux-${arch}.${ext}"
 publish:
   - provider: github
     owner: irrvlo
