--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,13 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-12, windows-latest]
+        os: [macos-12, windows-latest, ubuntu-latest]
         include:
           - os: windows-latest
             arch: x64
           - os: macos-12
+            arch: x64
+          - os: ubuntu-latest
             arch: x64
 
     steps:
